kubernetes/service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maple-user-auth-service
  namespace: maple-system
  labels:
    app: maple-user-auth
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8081
  selector:
    app: maple-user-auth
